deployments/ingress-resources/api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /api/poi(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: poi-svc
            port:
              number: 80
      - path: /api/docs/poi
        pathType: Prefix
        backend:
          service:
            name: poi-svc
            port:
              number: 80
      - path: /swagger/docs/poi
        pathType: Prefix
        backend:
          service:
            name: poi-svc
            port:
              number: 80
      - path: /api/trips(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-svc
            port:
              number: 80
      - path: /api/docs/trips(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-svc
            port:
              number: 80
      - path: /api/json(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: trips-svc
            port:
              number: 80
      - path: /api/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-svc
            port:
              number: 80
      - path: /api/docs/user(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userprofile-svc
            port:
              number: 80
      - path: /api/user-java(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userjava-svc
            port:
              number: 80
      - path: /api/docs/user-java(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userjava-svc
            port:
              number: 80
      - path: /api/documentation/user-java(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userjava-svc
            port:
              number: 80
      - path: /api/swagger-resources(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userjava-svc
            port:
              number: 80
      - path: /api/api-docs(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userjava-svc
            port:
              number: 80
